apps/dg/resources/dg.css
/* ... */
.rescale-button:hover {
    background-color: #dada00;
}

.rescale-button:active {
    background-color: gray;
}

#export_case_data_prompt {
    font-weight: bold;
    text-align: right;
    line-height: 22px;
}

#formula_object {
    background-color: white;
    top: 0;
    bottom: 10px;
    left: 0;
    right: 10px;
    padding: 5px;
}

#formula_object p {
    margin-bottom: 7px;
}

#formula_object p, em {
    font-size: 14px;
}

#formula_object h2 {
    font-weight: bold;
    font-size: 16px;
}

#formula_object em {
    font-weight: bold;
    font-style: italic;
}

#formula_object table {
    width: 100%;
    margin: 0 auto;
    border-collapse: collapse;
}

#formula_object th, td {
    padding: 5px;
    font-size: 14px;
}

#formula_object table, th, td {
    border: 1px solid gray;
}

#formula_object th {
    font-weight: bold;
    text-align: center;
}

#formula_object textarea {
    width: 100%;
}

#formula_object input {
    width: 100px;
}

/* used by DG.CaseTableCellEditor */
input.dg-editor-text {
    width: 100%;
    height: 100%;
    border: 0;
    margin: 0;
    background: transparent;
    outline: 0;
    padding: 0;

}

.dg-file-import-view {
    background-color: transparent;
}

.dg-file-import-view.focus {
    outline: none !important;
}

.dg-alert, .dg-alert textarea {
    color: red;
}

.dg-guide-alert {
    color: red;
    font-size: 10px !important;
    background-color: lightyellow;
}

.sc-label-view.ellipsis {
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    -o-text-overflow: ellipsis !important;
    -ms-text-overflow: ellipsis !important;
}

.disabled {
    opacity: .5;
}

.invisible {
    opacity: 0;
}

.sc-text-field-view.inline-editor {
    z-index: 20;
}

.dg-example-name{
    font-weight: bold;
    color: #E75204;
}

.sel .dg-example-name {
    color: inherit;
}

.dg-table-drop-target {
    background-color: white;
    width: 30px;
}

.dg-table-drop-target .sc-label-view {
    -webkit-writing-mode: vertical-rl;
    writing-mode: vertical-rl;
    text-align: center;
    transform: rotate(180deg);
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
}

.dg-table-drop-target .sc-label-view:lang(zh) {
    transform: rotate(0deg);
}

.dg-table-drop-target.dg-table-drop-target-show .sc-label-view {
    outline: 4px solid #ffe4b3;
}

.dg-table-drop-target-show .slick-header{
    border-top: medium #ffe4b3 solid;
    border-bottom: medium #ffe4b3 solid;
}

.dg-table-drop-target-highlight  .sc-label-view {
    background-color: #ffffb3;
}

.slick-header-column.drag-insert-left {
    border-left-color: yellow;
    border-left-style: solid;
    border-left-width: thick;
}

.slick-header-column.drag-insert-right {
    border-right-color: yellow;
    border-right-style: solid;
    border-right-width: thick;
}

.dg.ace.dg-split-divider {
    z-index: 0;
    background: transparent;
    border: 0;
}

.dg.ace.dg-table-drop-target svg image:hover {
    cursor: pointer;
}

@keyframes pulse {
    from {
        opacity: 1;
    }
    to {
        opacity: 0.20;
    }
}

.sc-view.dg.dg-web-view-backdrop {
    background-color: white;
    transform: rotate(-30deg) translateY(35%) ;
}
.sc-view.dg.dg-web-view-backdrop .dg-web-view-url {
    text-align: center;
    color: white;
    text-shadow: -1px -1px 0 #888, 1px -1px 0 #888, -1px 1px 0 #888, 1px 1px 0 #888;
    font-size: x-large;
}
.sc-view.dg.dg-web-view-backdrop .dg-web-view-message {
    color: gray;
    font-size: smaller;
    text-align: center;
}
.sc-view.dg.dg-web-view-backdrop.dg-interactive-loading {
    animation-direction: alternate;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-name: pulse;
}
.sc-view.dg.dg-interactive-connected .dg-web-view-backdrop {
    visibility: hidden;
}

  /*Overrides for Spectrum */
.sp-container, .sp-container button, .sp-container input, .sp-color, .sp-hue, .sp-clear {
    font: normal 12px "MuseoSans-500", sans-serif !important;
}
.sp-replacer {
    border-color: #c6c6c6 !important;
}

.sp-replacer:hover, .sp-replacer.sp-active {
    border-color: #888888 !important;
}

.sp-container {
    border: solid 1px #cccccc !important;
}

.sp-palette .sp-thumb-el:hover, .sp-palette .sp-thumb-el.sp-thumb-active {
    border-color: #888888 !important;
}

.dg-text-measurer {
    position: fixed;
    visibility: hidden;
    height: auto;
    width: auto;
    white-space: nowrap;
    top: -1000px;
    left: -1000px;
}

.dg-formula-column {
    background-color: rgba(256, 256, 0, 0.2);
}

.slick-row.even .slick-cell.dg-index-column {
    background-color: #EEFEE3
}

.slick-row.odd .slick-cell.dg-index-column {
    background-color: #D3E9C8
}

html.dg-embedded-mode .sc-main, html.dg-embedded-mode .dg-doc-background {
    background: transparent!important;
}

/*
   Fix for embedded mode. Header menu is placed at end of document so not within
   codap cascade.
 */
html.dg-embedded-mode .slick-header-menu  .slick-header-menuitem{
    font-family: 'Montserrat-Regular', sans-serif ;
    font-size: 12px;
    color: #000;
}

html.dg-embedded-mode .sc-pane.sc-view.dg {
    color: #000;
    font-size: 12px;
    font-family: MuseoSans-500;
}

html.dg-embedded-mode .dg-data-tip-text {
  color: #000;
  font-size: 10px!important;
  font-family: MuseoSans-500;
}

/*.sc-view img.dg-trash-icon {*/
    /*position: absolute;*/
    /*right: 10px;*/
    /*top: 2px;*/
    /*width: 16px;*/
    /*left: unset;*/
/*}*/

.dg-right-icon {
    right: 6px;
    position: absolute;
}

.dg-trash-icon:before {
    font-family: 'icomoon';
    font-size: 12px;
    content: "\e629";
    color: black;
}

.slick-cell .dg-index {
    width: 100%;
    text-align: center;
    display: block;
}
.slick-cell .dg-numeric {
    width: 100%;
    text-align: right;
    display: block;
    font-variant-numeric: tabular-nums;
}
body.windows .slick-row .slick-cell:last-of-type {
    padding-right: 17px;
}
/* ... */

